Fix mission text alignment in mobile view

--- a/style.css
+++ b/style.css
@@ -266,8 +266,8 @@ img.logoImage {
     padding-top: 100px;
     padding-bottom: 100px;
     /* background-image: url(images/image7.jpg); */
-    /* background: linear-gradient(rgba(0,0,0,.75), rgba(0,0,0,.75)), url("images/features/beach.jpg"); */
-    background-color: var(--almostblue);
+    background: linear-gradient(rgba(0,0,0,.75), rgba(0,0,0,.75)), url("images/features/lucas-sankey-gdQ_az6CSPo-unsplash.jpg");
+    /* background-color: var(--almostblue); */
     background-size: 100%;
     background-attachment: fixed;
     background-size: cover; 
