--- a/style_mobile.css
+++ b/style_mobile.css
@@ -101,12 +101,13 @@
     color: white;
     font-size: 14px;
     max-width: 85ch;
-    text-align: center;
+    text-align: left;
     /* text-shadow: -0.3px -0.3px 0 grey, .3px -.3px 0 grey, -.3px .3px 0 grey, .3px .3px 0 gray; */
     /* text-shadow: -0.3px -0.3px 0 darkgrey, .3px -.3px 0 darkgrey, -.3px .3px 0 darkgrey, .3px .3px 0 darkgrey; */
 }
-.section.one.mission {
-    padding: 32px 32px;
+#mission_section {
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 /* Features section */
